[package]
name = "tabiew"
version = "0.3.2"
authors = ["Shayan Hashemi <shshemi@gmail.com>"]
license = "MIT"
edition = "2021"
description = "Tabiew is a lightweight, terminal-based application to view and query delimiter separated value formatted documents, such as CSV and TSV files."
repository = "https://github.com/shshemi/tabiew"
documentation = "https://docs.rs/tabiew"
homepage = "https://github.com/shshemi/tabiew"

[[bin]]
name="tw"
path="src/main.rs"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
crossterm = "0.27.0"
itertools = "0.12.1"
polars = { version = "0.39.2", features = ["dtype-decimal", "lazy", "polars-sql"] }
polars-sql = "0.39.2"
ratatui = "0.26.0"
tui-textarea = "0.4.0"

[package.metadata.deb]
license-file = [ "LICENSE", "4" ]
depends = "$auto"
extended-description = """
Tabiew is a lightweight, terminal-based application to view and query delimiter separated value formatted documents, such as CSV and TSV files.
"""
section = "utils"
priority = "optional"
assets = [
    [ "target/release/tw", "/usr/bin/tw", "0755" ],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/tw", dest = "/usr/bin/tw", mode = "755" },
]

[profile.release]
lto = true
strip = true
opt-level = 3
codegen-units = 1
panic = 'abort'