[package]
name = "tabiew"
version = "0.11.1"
authors = ["Shayan Hashemi <shshemi@gmail.com>"]
license = "MIT"
edition = "2024"
description = "A lightweight TUI application to view and query tabular data files, such as CSV, TSV, and parquet."
repository = "https://github.com/shshemi/tabiew"
documentation = "https://docs.rs/tabiew"
homepage = "https://github.com/shshemi/tabiew"

[package.metadata.deb]
license-file = ["LICENSE", "4"]
depends = "$auto"
extended-description = """
Tabiew is a lightweight, terminal-based application to view and query delimiter separated value formatted documents, such as CSV and TSV files.
"""
section = "utils"
priority = "optional"
assets = [
    [
        "target/release/tw",
        "/usr/bin/tw",
        "0755",
    ],
    [
        "target/manual/tabiew.1",
        "/usr/share/man/man1/tw.1",
        "0644",
    ],
    [
        "target/manual/tabiew.1",
        "/usr/share/man/man1/tabiew.1",
        "0644",
    ],
    [
        "target/completion/tw.bash",
        "/usr/share/bash-completion/completions/tw.bash",
        "0644",
    ],
    [
        "target/completion/_tw",
        "/usr/share/zsh/vendor-completions/_tw",
        "0644",
    ],
    [
        "target/completion/tw.fish",
        "/usr/share/fish/completions/tw.fish",
        "0644",
    ],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/tw", dest = "/usr/bin/tw", mode = "755" },
    { source = "target/manual/tabiew.1", dest = "/usr/share/man/man1/tw.1", mode = "0644" },
    { source = "target/manual/tabiew.1", dest = "/usr/share/man/man1/tabiew.1", mode = "0644" },
    { source = "target/completion/tw.bash", dest = "/usr/share/bash-completion/completions/tw.bash", mode = "0644" },
    { source = "target/completion/_tw", dest = "/usr/share/zsh/vendor-completions/_tw", mode = "0644" },
    { source = "target/completion/tw.fish", dest = "/usr/share/fish/completions/tw.fish", mode = "0644" },
]

[[bin]]
name = "tw"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
fwf-rs = "0.2.0"
itertools = "0.14.0"
polars = { version = "0.52.0", features = ["full"] }
polars-sql = "0.52.0"
polars-lazy = "0.52.0"
rand = "0.9.2"
ratatui = { version = "0.29.0", features = ["serde", "unstable-rendered-line-info"] }
rayon = "1.11.0"
regex = "1.12.2"
rusqlite = { version = "0.38.0", features = [
    "bundled",
    "bundled-sqlcipher-vendored-openssl",
] }
tempfile = "3.24.0"
anyhow = "1.0.100"
fuzzy-matcher = "0.3.7"
tui-input = "0.14.0"
home = "0.5.12"
unicode-width = "0.2.0"
calamine = "0.32.0"
base64 = "0.22.1"
chrono = "0.4.42"
num_cpus = "1.17.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
shell-words = "1.1.1"
tui-scrollview = "0.5.3"
strum = "0.27"
strum_macros = "0.27"
ryu = "1.0.22"
itoa = "1.0.17"

[build-dependencies]
clap = { version = "4.5.53", features = ["derive"] }
clap_mangen = { version = "0.2.31" }
clap_complete = { version = "4.5.62" }

[profile.release]
opt-level = 3
strip = true
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
lto = "fat"
panic = "abort"
