[package]
name = "tabiew"
version = "0.13.0"
authors = ["Shayan Hashemi <shshemi@gmail.com>"]
license = "MIT"
edition = "2024"
description = "A lightweight TUI application to view and query tabular data files, such as CSV, TSV, and parquet."
repository = "https://github.com/shshemi/tabiew"
documentation = "https://docs.rs/tabiew"
homepage = "https://github.com/shshemi/tabiew"

[package.metadata.deb]
license-file = ["LICENSE", "4"]
depends = "$auto"
extended-description = """
Tabiew is a lightweight, terminal-based application to view and query delimiter separated value formatted documents, such as CSV and TSV files.
"""
section = "utils"
priority = "optional"
assets = [
    [
        "target/release/tw",
        "/usr/bin/tw",
        "0755",
    ],
    [
        "target/manual/tabiew.1",
        "/usr/share/man/man1/tw.1",
        "0644",
    ],
    [
        "target/manual/tabiew.1",
        "/usr/share/man/man1/tabiew.1",
        "0644",
    ],
    [
        "target/completion/tw.bash",
        "/usr/share/bash-completion/completions/tw.bash",
        "0644",
    ],
    [
        "target/completion/_tw",
        "/usr/share/zsh/vendor-completions/_tw",
        "0644",
    ],
    [
        "target/completion/tw.fish",
        "/usr/share/fish/completions/tw.fish",
        "0644",
    ],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/tw", dest = "/usr/bin/tw", mode = "755" },
    { source = "target/manual/tabiew.1", dest = "/usr/share/man/man1/tw.1", mode = "0644" },
    { source = "target/manual/tabiew.1", dest = "/usr/share/man/man1/tabiew.1", mode = "0644" },
    { source = "target/completion/tw.bash", dest = "/usr/share/bash-completion/completions/tw.bash", mode = "0644" },
    { source = "target/completion/_tw", dest = "/usr/share/zsh/vendor-completions/_tw", mode = "0644" },
    { source = "target/completion/tw.fish", dest = "/usr/share/fish/completions/tw.fish", mode = "0644" },
]

[[bin]]
name = "tw"
path = "src/main.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["use-dev-tty"] }
fwf-rs = "0.2.2"
itertools = "0.14.0"
polars = { version = "0.53.0", features = ["full"] }
polars-sql = "0.53.0"
polars-lazy = "0.53.0"
rand = "0.10.1"
ratatui = { version = "0.30.0", features = ["serde", "unstable-rendered-line-info"] }
rayon = "1.12.0"
regex = "1.12.3"
rusqlite = { version = "0.39.0", features = [
    "bundled",
    "bundled-sqlcipher-vendored-openssl",
] }
tempfile = "3.27.0"
anyhow = "1.0.102"
fuzzy-matcher = "0.3.7"
tui-input = "0.15.3"
home = "0.5.12"
unicode-width = "0.2.2"
calamine = "0.34.0"
base64 = "0.22.1"
chrono = "0.4.41"
num_cpus = "1.17.0"
serde = { version = "1.0.228", features = ["derive"] }
toml = "1.1.2"
shell-words = "1.1.1"
tui-scrollview = "0.6.4"
sqlparser = "0.61.0"
strum = "0.28.0"
strum_macros = "0.28.0"
ryu = "1.0.23"
itoa = "1.0.17"
logfmt-zerocopy = "0.1.3"
indexmap = "2.14.0"
ureq = "2"

[dev-dependencies]
rstest = "0.26.1"

[build-dependencies]
clap = { version = "4.5.54", features = ["derive"] }
clap_mangen = { version = "0.2.33" }
clap_complete = { version = "4.6.0" }
strum = "0.28.0"
strum_macros = "0.28.0"

[profile.release]
opt-level = 3
strip = true
debug-assertions = false
overflow-checks = false
incremental = false
codegen-units = 1
lto = "fat"
panic = "abort"
